Small export dialog fixes

--- a/index.html
+++ b/index.html
@@ -505,9 +505,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                             <label for="expimg-select-theme-color">Color:</label>
                                             <select name="expimg-theme-color" id="expimg-select-theme-color" onchange="updateImageExportPopup()">
                                                 <option value="">None</option>
-                                                <option value="-red">Red</option>
-                                                <option value="-green">Green</option>
-                                                <option value="-blue">Blue</option>
+                                                <option value="red">Red</option>
+                                                <option value="green">Green</option>
+                                                <option value="blue">Blue</option>
                                             </select>
                                         </span>
                                         <span>
