Use SVGs for close and search icons

--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td id="normal-form"></td>
                         </tr>
                         <tr id="row-prime">
-                            <td i18n="row-prime">Prime form: <a href="javascript:showPrimeSelector()">&#128269;</a></td>
+                            <td i18n="row-prime">Prime form: <a class="icon-search" href="javascript:showPrimeSelector()">&#128269;</a></td>
                             <td id="prime-form"></td>
                         </tr>
                         <tr id="row-forte">
-                            <td i18n="row-forte">Forte/Morris name: <a href="javascript:showForteSelector()">&#128269;</a></td>
+                            <td i18n="row-forte">Forte/Morris name: <a class="icon-search" href="javascript:showForteSelector()">&#128269;</a></td>
                             <td id="forte-name"></td>
                         </tr>
                         <tr id="row-carter" hidden>
-                            <td i18n="row-carter">Carter number: <a href="javascript:showCarterSelector()">&#128269;</a></td>
+                            <td i18n="row-carter">Carter number: <a class="icon-search" href="javascript:showCarterSelector()">&#128269;</a></td>
                             <td id="carter-name"></td>
                         </tr>
                         <tr id="row-descriptive-name">
-                            <td i18n="row-descriptive-name">Descriptive name(s): <a href="javascript:showDescriptionSelector()" hidden>&#128269;</a></td>
+                            <td i18n="row-descriptive-name">Descriptive name(s): <a class="icon-search" href="javascript:showDescriptionSelector()" hidden>&#128269;</a></td>
                             <td id="descriptive-name"></td>
                         </tr>
                         <tr id="row-ic-vector">
