Change pedal checkbox text

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                     </span>
                                     <span>
                                         <input id="chk-midi-pedal" type="checkbox" onchange="selectMidiMode()">
-                                        <label for="chk-midi-pedal">Enable sustain pedal</label>
+                                        <label for="chk-midi-pedal">Hold with sustain pedal</label>
                                     </span>
                                 </td>
                             </tr>
