--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                             <td id="features"></td>
                         </tr>
                         <tr id="row-rotations" hidden>
-                            <td i18n="row-rotations">Orderings:</td>
+                            <td i18n="row-rotations">Modes:</td>
                             <td id="rotations"></td>
                         </tr>
                         <tr id="row-symmetries" hidden>
