Fix "All paths" checkbox always visible

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                             <input id="chk-export-inversion-axis" type="checkbox" onchange="updateImageExportPopup()">
                                             <label for="chk-export-inversion-axis">Inversion axis</label>
                                         </span>
-                                        <span>
+                                        <span includetype="clockface-inversion">
                                             <input id="chk-inversion-all-paths" type="checkbox" onchange="updateImageExportPopup()">
                                             <label for="chk-inversion-all-paths">All paths</label>
                                         </span>
