New colorful theme type + required infrastructure

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
         <script type="text/javascript" src="js/popups.js" async></script>
         <script type="text/javascript" src="js/midi.js" async></script>
         <script type="text/javascript" src="js/svgtools.js" defer></script>
+        <script type="text/javascript" src="js/colors.js" defer></script>
         <script type="text/javascript" src="js/graphics.js" defer></script>
         <script type="text/javascript" src="js/utils.js"></script>
         <script type="text/javascript" src="js/i18n.js" defer></script>
@@ -557,8 +558,8 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                         <span excludetype="staff-set" style="padding-right: 0.5ch;">
                                             <select name="expimg-theme" id="expimg-select-theme" onchange="updateImageExportPopup()">
                                                 <option value="basic">Basic</option>
-                                                <option value="hard">Hard</option>
-                                                <option value="soft">Soft</option>
+                                                <option value="hard">Solid</option>
+                                                <option value="soft">Subtle</option>
                                             </select> 
                                         </span>
                                         <span style="padding-right: 0.5ch;">
@@ -568,6 +569,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                                 <option value="red">Red</option>
                                                 <option value="green">Green</option>
                                                 <option value="blue">Blue</option>
+                                                <option value="colorful">Colorful</option>
                                             </select>
                                         </span>
                                         <span>
