--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                         </span>
                                         <span includetype="clockface-set clockface-intervals clockface-inversion ruler-set">
                                             <input id="chk-export-note-names" type="checkbox" onchange="updateImageExportPopup()">
-                                            <label for="chk-export-note-names">Note names instead of numbers</label>
+                                            <label for="chk-export-note-names">Note names</label>
                                         </span>
                                         <span includetype="clockface-set">
                                             <input id="chk-export-polygon" type="checkbox" onchange="updateImageExportPopup()">
@@ -557,8 +557,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                     <td>
                                         <span excludetype="staff-set" style="padding-right: 0.5ch;">
                                             <select name="expimg-theme" id="expimg-select-theme" onchange="updateImageExportPopup()">
-                                                <option value="basic">Basic</option>
-                                                <option value="hard">Solid</option>
+                                                <option value="basic">Simple</option>
+                                                <option value="hard">Strong</option>
+                                                <option value="solid">Solid</option>
                                                 <option value="soft">Subtle</option>
                                             </select> 
                                         </span>
@@ -586,12 +587,14 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
                                     <td>
                                         <span class="range-label">Small</span>
                                         <input type="range" id="expimg-scale" name="expimg-scale" oninput="updateImageExportPopup()" 
-                                        value="1.15" min="1.0" max="1.3" step="0.15" list="expimg-scale-list"/>
+                                        value="1.15" min="1.0" max="1.3" step="0.075" list="expimg-scale-list"/>
                                         <span class="range-label">Large</span>
                                     </td>
                                     <datalist id="expimg-scale-list">
                                         <option value="1.0" ></option>
+                                        <option value="1.075" ></option>
                                         <option value="1.15"></option>
+                                        <option value="1.225"></option>
                                         <option value="1.3" ></option>
                                     </datalist>
                                 </tr>
